--- a/main.kv
+++ b/main.kv
@@ -33,60 +33,59 @@ MDBoxLayout:
     MDBoxLayout:
         id: box
         orientation: "vertical"
-        height: root.height * 0.2
         MDTopAppBar:
             title: "Download image files from NASA"
-        MDLabel:
-            text: "Please enter image name or link below"
-            font_size: 20
-            pos_hint: {"x": 0.02}
-            size_hint: 1, 0.1
-        MDTextField:
-            # padding: dp(15), dp(15)
-            id: text_field
-            hint_text: "Image name or url"
-            size_hint: 0.8, None
-            width: dp(10)
-            pos_hint: {"x": 0.013}
-            # required: True
-            # multiline: False
-            font_size: 14
-            on_focus: root.check_resource()
-            on_text_validate: root.check_resource()
-            helper_text: "Not a valid resource name or url"
-            helper_text_mode: "on_error"
         MDBoxLayout:
-            id: btn_box
-            spacing: dp(10)
-            size_hint: 0.8, 0.05
-            pos_hint: {"x": 0.015}
-            orientation: "horizontal"
-            MDRectangleFlatIconButton:
-                id: preview_resource_btn
-                padding: dp(10), dp(10)
-                icon: "eye"
-                text: "Preview resource"
-                disabled: True
-                on_press:
-                    root.show_preview_dialog()
-            MDRectangleFlatIconButton:
-                id: download_resource_btn
-                padding: dp(10), dp(10)
-                icon: "download"
-                text: "Download resource"
-                disabled: True
-                on_press:
-                    root.show_download_dialog()
-        MDLabel:
-            markup: True
-            text:
-                ("Example:\n"
-                "(name) JUPITER PJ44 SOUTH TEMPERATE BELT\n"
-                "(url) https://www.missionjuno.swri.edu/junocam/"
-                "[color=#f00]processing?id=[/color]13796")
-            font_size: 14
-            pos_hint: {"x": 0.02}
-            size_hint: 1, 0.2
+            id: content
+            orientation: "vertical"
+            padding: dp(30)
+            MDLabel:
+                text: "Please enter image name or link below"
+                font_size: 20
+                size_hint: 1, 0.1
+            MDTextField:
+                # padding: dp(15), dp(15)
+                id: text_field
+                hint_text: "Image name or url"
+                size_hint: 0.8, None
+                width: dp(10)
+                # required: True
+                # multiline: False
+                font_size: 14
+                on_focus: root.check_resource()
+                on_text_validate: root.check_resource()
+                helper_text: "Not a valid resource name or url"
+                helper_text_mode: "on_error"
+            MDBoxLayout:
+                id: btn_box
+                spacing: dp(10)
+                size_hint: 0.8, 0.05
+                orientation: "horizontal"
+                MDRectangleFlatIconButton:
+                    id: preview_resource_btn
+                    padding: dp(10), dp(10)
+                    icon: "eye"
+                    text: "Preview resource"
+                    disabled: True
+                    on_press:
+                        root.show_preview_dialog()
+                MDRectangleFlatIconButton:
+                    id: download_resource_btn
+                    padding: dp(10), dp(10)
+                    icon: "download"
+                    text: "Download resource"
+                    disabled: True
+                    on_press:
+                        root.show_download_dialog()
+            MDLabel:
+                markup: True
+                text:
+                    ("Example:\n"
+                    "(name) JUPITER PJ44 SOUTH TEMPERATE BELT\n"
+                    "(url) https://www.missionjuno.swri.edu/junocam/"
+                    "[color=#f00]processing?id=[/color]13796")
+                font_size: 14
+                size_hint: 1, 0.2
 
 <ResourceItem>
     size_hint_y: None
