--- a/main.kv
+++ b/main.kv
@@ -6,18 +6,15 @@ MDBoxLayout:
         MDNavigationRailItem:
             text: "Home"
             icon: "home"
-            on_release:
-                app.manager.current = 'home'
+            on_release: app.switch_screen('home')
         MDNavigationRailItem:
             text: "Download"
             icon: "file-download"
-            on_release:
-                app.manager.current = 'download'
+            on_release: app.switch_screen('download')
         MDNavigationRailItem:
             text: "My Files"
             icon: "folder"
-            on_release:
-                app.manager.current = 'my_files'
+            on_release: app.switch_screen('my_files')
         # MDNavigationRailItem:
         #     text: "Edit"
         #     icon: "tune"
@@ -94,6 +91,7 @@ MDBoxLayout:
     radius: 12
     ripple_behavior: True
     elevation: 3
+    on_press: app.switch_screen('edit')
 
     FitImage:
         id: image
