Wrap adjustment widgets into Adjustment class
- Add edit_pipeline_callback in main app to call
EditScreen.pipeline() from Adjustment
- Add text fields for an alternative way of entering values besides
sliders
- Move callbacks from main.kv to edit.py

--- a/main.kv
+++ b/main.kv
@@ -151,9 +151,9 @@ MDBoxLayout:
                 # pos_hint: {'top': 0.1, 'left': 0.1}
 
             MDBoxLayout:
+                id: adjustments
                 orientation: "vertical"
                 padding: dp(10)
-                on_touch_up: root.pipeline()
                 canvas.before:
                     Color:
                         rgba: 0, 0, 0, 0.2
@@ -169,46 +169,6 @@ MDBoxLayout:
                     MDLabel:
                         font_style: "H6"
                         text: "Image adjustments"
-                MDLabel:
-                    text: "Brightness"
-                MDSlider:
-                    id: brightness_slider
-                    min: -100
-                    max: 100
-                    value: 0
-                    hint: True
-                MDLabel:
-                    text: "Contrast"
-                MDSlider:
-                    id: contrast_slider
-                    min: -100
-                    max: 100
-                    value: 0
-                    hint: True
-                MDLabel:
-                    text: "Hue"
-                MDSlider:
-                    id: hue_slider
-                    min: -180
-                    max: 180
-                    value: 0
-                    hint: True
-                MDLabel:
-                    text: "Saturation"
-                MDSlider:
-                    id: saturation_slider
-                    min: -100
-                    max: 100
-                    value: 0
-                    hint: True
-                MDLabel:
-                    text: "Lightness"
-                MDSlider:
-                    id: lightness_slider
-                    min: -100
-                    max: 100
-                    value: 0
-                    hint: True
                 MDLabel:
                     id: note
                     text: "Note: The saturation of these images has already been cranked up in the default post-processing pipeline, so increasing the saturation in this panel may not produce significant visual changes. Feel free to try to decrease the saturation instead."
