--- a/main.kv
+++ b/main.kv
@@ -256,10 +256,13 @@ MDBoxLayout:
             height: Window.height
             MDSliverAppbarHeader:
                 MDBoxLayout:
-
+                    orientation: 'vertical'
                     MDLabel:
                         font_style: 'H4'
                         text: 'Choose Your File'
+                    MDLabel:
+                        font_style: 'Subtitle1'
+                        text: 'Due to most of Data from NASA have not renewed, the choose of Data is not work. By Default there is a Data that is already chosen.'
             MDSliverAppbarContent:
                 id: module_content
                 orientation: "vertical"
